RESOLVED FIXED 259844
System fonts are not displayed in the correct style for their idiom in compatibility mode on visionOS
https://bugs.webkit.org/show_bug.cgi?id=259844
Summary System fonts are not displayed in the correct style for their idiom in compat...
Megan Gardner
Reported 2023-08-04 16:21:03 PDT
System fonts are not displayed in the correct style for their idiom in compatilibily mode on visionOS.
Attachments
Megan Gardner
Comment 1 2023-08-04 16:21:29 PDT
Megan Gardner
Comment 2 2023-08-04 16:27:58 PDT
EWS
Comment 3 2023-08-08 19:42:45 PDT
Committed 266710@main (7ef05e80175b): <https://commits.webkit.org/266710@main> Reviewed commits have been landed. Closing PR #16411 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.