Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h
@@ -93,6 +93,9 @@ typedef enum {
 - (void)_setIdleTimerDisabled:(BOOL)disabled forReason:(NSString *)reason;
 @end
 
+static const UIUserInterfaceIdiom UIUserInterfaceIdiomWatch = (UIUserInterfaceIdiom)4;
+
+
 @interface UIColor ()
 
 + (UIColor *)systemBlueColor;
